edited footers on all files

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,13 @@
                 </h2>
             <div class="row">
                 <div class="col-md-6">
-                        <img src="assets/images/portfolio_thumbnail_01.jpg" alt="Portfolio 1" class="img-thumbnail">
-                        <img src="assets/images/portfolio_thumbnail_03.jpg" alt="Portfolio 3" class="img-thumbnail">
-                        <img src="assets/images/portfolio_thumbnail_05.jpg" alt="Portfolio 5" class="img-thumbnail">
+                        <img src="assets/images/portfolio_thumbnail_01.jpg" alt="Portfolio 1" class="img-thumbnail" height="300" width="300">
+                        <img src="assets/images/portfolio_thumbnail_03.jpg" alt="Portfolio 3" class="img-thumbnail" height="300" width="300">
+                        <img src="assets/images/portfolio_thumbnail_05.jpg" alt="Portfolio 5" class="img-thumbnail" height="300" width="300">
                 </div>
                 <div class="col-md-6">
-                        <img src="assets/images/portfolio_thumbnail_02.jpg" alt="Portfolio 2" class="img-thumbnail">
-                        <img src="assets/images/portfolio_thumbnail_04.jpg" alt="Portfolio 4" class="img-thumbnail">
+                        <img src="assets/images/portfolio_thumbnail_02.jpg" alt="Portfolio 2" class="img-thumbnail" height="300" width="300">
+                        <img src="assets/images/portfolio_thumbnail_04.jpg" alt="Portfolio 4" class="img-thumbnail" height="300" width="300">
                 </div>
             </div>
             </div>
@@ -63,8 +63,9 @@
 
 <!-- Footer -->
 <footer class="navbar sticky-bottom navbar-dark bg-dark">
-    <p>© Stephanie Aurelio 2019</p>
+  <span class="navbar-text" id="footer-text">© Stephanie Aurelio 2019</span>
 </footer>
+  
 
 <!-- Script Links -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
