--- a/contact.html
+++ b/contact.html
@@ -53,13 +53,15 @@
         <label for="exampleFormControlTextarea1">Message</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
+    <button type="submit" class="btn btn-light">Submit</button>
 </form>
 </div>
 
 <!-- Footer -->
-<footer class="navbar sticky-bottom navbar-dark bg-dark">
-        <p>© Stephanie Aurelio 2019</p>
-    </footer>
+<footer class="navbar fixed-bottom navbar-dark bg-dark">
+  <span class="navbar-text" id="footer-text">© Stephanie Aurelio 2019</span>
+</footer>
+  
 
 <!-- Script Links -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
