--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 </div>
 
 <!-- Footer -->
-<footer class="navbar sticky-bottom navbar-dark bg-dark">
-    <p>© Stephanie Aurelio 2019</p>
+<footer class="navbar fixed-bottom navbar-dark bg-dark">
+    <span class="navbar-text" id="footer-text">© Stephanie Aurelio 2019</span>
 </footer>
-        
     
 
 <!-- Script Links -->
