--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Stephanie Aurelio</a>
+        <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
             <div class="page-header">
                 <h2>About Me</h2>
             </div>
-                <div class="row">
+                <div class="row" id="bio-content">
                     <div class="col-md-3">
                     <img src="assets/images/bio_photo_01.jpg" alt="Stephanie Aurelio" class="img-thumbnail">
                     </div>
