--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Stephanie Aurelio</a>
+        <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,8 +42,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
-                <h2>Portfolio
-                </h2>
+                <h2>Portfolio</h2>
             <div class="row">
                 <div class="col-md-6">
                         <img src="assets/images/portfolio_thumbnail_01.jpg" alt="Portfolio 1" class="img-thumbnail" height="300" width="300">
