fixed header issues and added media query for navbar-brand

--- a/contact.html
+++ b/contact.html
@@ -15,27 +15,22 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <!-- a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a-->
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
+  <ul class="nav justify-content-end" id="navbarNav">
+    <li class="nav-item">
+      <a class="nav-link active" href="index.html">About</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="portfolio.html">Portfolio</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="contact.html">Contact</a>
+    </li>
+    <!--li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li-->
+  </ul>
+</nav>
 
 <!-- Contact Section -->
 <div class="container" id="contact-form">
@@ -59,7 +54,7 @@
 
 <!-- Footer -->
 <footer class="navbar fixed-bottom navbar-dark bg-dark">
-  <span class="navbar-text" id="footer-text">© Stephanie Aurelio 2019</span>
+  <span class="navbar-text">© Stephanie Aurelio 2019</span>
 </footer>
   
 
