--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
   <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
   <ul class="nav justify-content-end" id="navbarNav">
     <li class="nav-item">
