--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
         <a class="navbar-brand" href="index.html">Stephanie Aurelio</a>
         <ul class="nav justify-content-end" id="navbarNav">
           <li class="nav-item">
@@ -53,7 +53,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="navbar fixed-bottom navbar-dark bg-dark">
+<footer class="navbar fixed-bottom navbar-dark bg-dark mt-5">
     <span class="navbar-text">© Stephanie Aurelio 2019</span>
 </footer>
     
