--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,11 @@
     <li class="nav-item">
       <a class="nav-link active" href="index.html">About</a>
     </li>
+    <li class="divider pt-2">|</li>
     <li class="nav-item">
       <a class="nav-link" href="portfolio.html">Portfolio</a>
     </li>
+    <li class="divider pt-2">|</li>
     <li class="nav-item">
       <a class="nav-link" href="contact.html">Contact</a>
     </li>
@@ -38,11 +40,11 @@
 <form>
     <div class="form-group">
         <label for="exampleFormControlInput1">Name</label>
-        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="First name Last name">
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="First name Last name">
     </div>
     <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <label for="exampleFormControlInput2">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
         </div>
     <div class="form-group">
         <label for="exampleFormControlTextarea1">Message</label>
