--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="divder pt-2">|</li>
+          <li class="divider pt-2">|</li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
